--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW6_on_conflict_do_update_range.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW6_on_conflict_do_update_range.yaml
@@ -20,23 +20,21 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - DROP TABLE IF EXISTS CW6_accounts_1;
-            - CREATE TABLE IF NOT EXISTS CW6_accounts_1(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1 ASC));
-            - CREATE UNIQUE INDEX CW6_user_accounts_1 ON CW6_accounts_1(account_id_1 ASC, user_id_1 ASC);
 
-            - DROP TABLE IF EXISTS CW6_accounts_2;
-            - CREATE TABLE IF NOT EXISTS CW6_accounts_2(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1 ASC)) PARTITION BY RANGE (account_id_1);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_0 PARTITION OF CW6_accounts_2 FOR VALUES FROM (1) TO (20000000);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_1 PARTITION OF CW6_accounts_2 FOR VALUES FROM (20000000) TO (40000000);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_2 PARTITION OF CW6_accounts_2 FOR VALUES FROM (40000000) TO (60000000);
-            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_3 PARTITION OF CW6_accounts_2 FOR VALUES FROM (60000000) TO (80000001);
+
+            - DROP TABLE IF EXISTS CW6_accounts1_1;
+            - CREATE TABLE IF NOT EXISTS CW6_accounts1_1(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1 ASC)) PARTITION BY RANGE (account_id_1);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_0 PARTITION OF CW6_accounts1_1 FOR VALUES FROM (1) TO (20000000);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_1 PARTITION OF CW6_accounts1_1 FOR VALUES FROM (20000000) TO (40000000);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_2 PARTITION OF CW6_accounts1_1 FOR VALUES FROM (40000000) TO (60000000);
+            - CREATE TABLE IF NOT EXISTS CW6_0_2M_accounts_3 PARTITION OF CW6_accounts1_1 FOR VALUES FROM (60000000) TO (80000001);
         cleanup:
             - DROP TABLE IF EXISTS CW6_accounts_1;
             - DROP TABLE IF EXISTS CW6_accounts_2;
 
         loadRules:
-            -   table: CW6_accounts_
-                count: 2
+            -   table: CW6_accounts1_
+                count: 1
                 rows: 80000001
                 columns:
                     -   name: account_id_
@@ -57,90 +55,6 @@ microbenchmark:
                         params: [ 1, 8000000, 2 ]
 
         executeRules:
-            - workload: CW6_1_2column_condition_no_conflict_on_pkey_so_single_insert
-              run:
-                  - name: statement1_insert
-                    weight: 100
-                    queries:
-                        - query: INSERT INTO CW6_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
-                          bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
-                              -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
-
-            - workload: CW6_2_2column_condition_no_conflict_on_pkey_so_1024_insert
-              run:
-                  - name: statement1_insert
-                    weight: 100
-                    queries:
-                        - query: INSERT INTO CW6_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
-                          count: 1024
-                          bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
-                              -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
-
-            - workload: CW6_3_no_conflict_on_pkey_so_single_insert_on_partitioned_tbl_by_range
-              run:
-                  - name: statement1_insert
-                    weight: 100
-                    queries:
-                        - query: INSERT INTO CW6_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
-                          bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
-                              -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
-
-            - workload: CW6_4_no_conflict_on_pkey_so_1024_insert_on_partitioned_tbl_by_range
-              run:
-                  - name: statement1_insert
-                    weight: 100
-                    queries:
-                        - query: INSERT INTO CW6_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
-                          count: 1024
-                          bindings:
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryIntGen
-                                  params: [ 1, 4000000 ]
-                              -   util: PrimaryStringGen
-                                  params: [ 1, 50 ]
-                              -   util: PrimaryFloatGen
-                                  params: [ 1, 4000000, 2 ]
-
-
-
-            - workload: CW6_5_2column_condition_no_conflict_on_pkey_so_1024_insert
-              run:
-                  - name: statement1_insert
-                    weight: 100
-                    queries:
-                        - query: INSERT INTO CW6_accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
-                          pattern_count: 1024
-                          bindings:
-                              -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
-                              -   util: RandomNumber
-                                  params: [ 4000001, 8000000 ]
-                              -   util: RandomAString
-                                  params: [ 50, 50 ]
-                              -   util: RandomFloat
-                                  params: [ 4000001, 8000000, 2 ]
 
 
             - workload: CW6_6_no_conflict_on_pkey_so_1024_insert_on_partitioned_tbl_by_range
@@ -148,7 +62,7 @@ microbenchmark:
                   - name: statement1_insert
                     weight: 100
                     queries:
-                        - query: INSERT INTO CW6_accounts_2(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
+                        - query: INSERT INTO CW6_accounts1_1(account_id_1,user_id_1,addr_1,bal_1) VALUES [(?,?,?,?)][pattern_count] ON CONFLICT (account_id_1) DO UPDATE SET (account_id_1,user_id_1,addr_1,bal_1)=(excluded.account_id_1,excluded.user_id_1,excluded.addr_1,excluded.bal_1)
                           pattern_count: 1024
                           bindings:
                               -   util: RandomNumber
