--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_colocated_child_update.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/fk_colocated_child_update.yaml
@@ -26,9 +26,9 @@ microbenchmark:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS employees_without_fk;
             - DROP TABLE IF EXISTS projects;
-            - create table projects(id int, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id));
-            - create table employees_with_fk(id int, name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id));
-            - create table employees_without_fk(id int, name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id));
+            - create table projects(id int, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
+            - create table employees_with_fk(id int, name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
+            - create table employees_without_fk(id int, name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
         cleanup:
             - DROP TABLE IF EXISTS employees_with_fk;
             - DROP TABLE IF EXISTS employees_without_fk;
