--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G1_varyingFKconstraint.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G1_varyingFKconstraint.yaml
@@ -192,7 +192,7 @@ microbenchmark:
                           bindings:
                             - util: RandomInt
                               params: [1, 10000]
-                            - util: RandomInt
+                            - util: PrimaryIntGen
                               params: [1, 100000]
 
             - workload: FK_G1_fk-on-uniqueCol_insert
@@ -250,7 +250,7 @@ microbenchmark:
                                 params: [1, 1000000, 2]
                               - util: RandomInt
                                 params: [1,10000]
-                                
+
             - workload: FK_G1_no-fk_update
               run:
                   - name: FK_G1_no-fk_update
@@ -260,5 +260,5 @@ microbenchmark:
                           bindings:
                             - util: RandomInt
                               params: [1, 10000]
-                            - util: RandomInt
+                            - util: PrimaryIntGen
                               params: [1, 100000]
