--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_varyingFKnumbers_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_varyingFKnumbers_parent_operations.yaml
@@ -23,7 +23,7 @@ microbenchmark:
         setAutoCommit: false
         create:
             - DROP TABLE IF EXISTS employees_with_1_fk;
-            - DROP TABLE IF EXISTS employees_with_2_fk;
+            - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
             - DROP TABLE IF EXISTS employees1_with_2_fk_2_parent;
             - DROP TABLE IF EXISTS employees2_with_2_fk_2_parent;
 
@@ -43,10 +43,10 @@ microbenchmark:
             - create table employees2_with_2_fk_2_parent(id int primary key,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null);
         cleanup:
             - DROP TABLE IF EXISTS employees_with_1_fk;
-            - DROP TABLE IF EXISTS employees_with_2_fk;
+            - DROP TABLE IF EXISTS employees_with_2_fk_1_parent;
             - DROP TABLE IF EXISTS employees1_with_2_fk_2_parent;
             - DROP TABLE IF EXISTS employees2_with_2_fk_2_parent;
-            - DROP TABLE IF EXISTS projects_with_1_ref
+            - DROP TABLE IF EXISTS projects_with_1_ref;
             - DROP TABLE IF EXISTS projects_with_2_ref_1_child;
             - DROP TABLE IF EXISTS projects_with_2_ref_2_child;
             - DROP TABLE IF EXISTS projects_without_ref;
@@ -170,7 +170,7 @@ microbenchmark:
                     util: RandomInt
                     params: [1,10000]
 
-            - table: employees_with_2_fk
+            - table: employees_with_2_fk_1_parent
               rows: 100000
               columns:
                   - name: id
@@ -250,8 +250,8 @@ microbenchmark:
 
         afterLoad:
             - ALTER TABLE employees_with_1_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_1_ref(uid) ON DELETE CASCADE ON UPDATE CASCADE;
-            - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project FOREIGN KEY (project_uid1) REFERENCES projects_with_2_ref_1_child(uid1) ON DELETE CASCADE ON UPDATE CASCADE;
-            - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project FOREIGN KEY (project_uid2) REFERENCES projects_with_2_ref_1_child(uid2) ON DELETE CASCADE ON UPDATE CASCADE;
+            - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project1 FOREIGN KEY (project_uid1) REFERENCES projects_with_2_ref_1_child(uid1) ON DELETE CASCADE ON UPDATE CASCADE;
+            - ALTER TABLE employees_with_2_fk_1_parent add CONSTRAINT fk_project2 FOREIGN KEY (project_uid2) REFERENCES projects_with_2_ref_1_child(uid2) ON DELETE CASCADE ON UPDATE CASCADE;
             - ALTER TABLE employees1_with_2_fk_2_parent add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_2_ref_2_child(uid1) ON DELETE CASCADE ON UPDATE CASCADE;
             - ALTER TABLE employees2_with_2_fk_2_parent add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects_with_2_ref_2_child(uid2) ON DELETE CASCADE ON UPDATE CASCADE;
             
@@ -337,7 +337,7 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [1, 900000]
 
-            - workload: FK_G2_parent_2-fk_1-child_delete
+            - workload: FK_G2_parent_2-fk_2-child_delete
               run:
                   - name: FK_G2_parent_2-fk_2-child_delete
                     weight: 100
