--- a/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_colocated_varyingFKnumbers_parent_operations.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key/yugabyte/FK_G2_colocated_varyingFKnumbers_parent_operations.yaml
@@ -28,7 +28,7 @@ microbenchmark:
             - DROP TABLE IF EXISTS employees1_with_2_fk_2_parent;
             - DROP TABLE IF EXISTS employees2_with_2_fk_2_parent;
 
-            - DROP TABLE IF EXISTS projects_with_1_ref
+            - DROP TABLE IF EXISTS projects_with_1_ref;
             - DROP TABLE IF EXISTS projects_with_2_ref_1_child;
             - DROP TABLE IF EXISTS projects_with_2_ref_2_child;
             - DROP TABLE IF EXISTS projects_without_ref;
@@ -38,7 +38,7 @@ microbenchmark:
             - create table projects_with_2_ref_2_child(id int, uid1 int unique, uid2 int unique, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
             - create table projects_without_ref(id int, uid int unique not null, name varchar(20) not null, start_date date not null, end_date date, budget decimal(10,2), primary key(id asc));
 
-            - create table employees_with_1_fk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc);
+            - create table employees_with_1_fk(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
             - create table employees_with_2_fk_1_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_uid1 int not null, project_uid2 int not null, primary key(id asc));
             - create table employees1_with_2_fk_2_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
             - create table employees2_with_2_fk_2_parent(id int,name varchar(20) not null, email varchar(100) not null, phone varchar(15), position varchar(10), salary decimal(8,2), project_id int not null, primary key(id asc));
